# bart

./: .gitignore  Cargo.toml  README.adoc  README.md  conftest.py  pyproject.toml  taskell.md
bart/: api.py  cli.py  config.py  exceptions.py  models.py  project.py  settings.py  templates.py  tui.py  utilites.py
bart/actions/: build.py  joins.py  splits.py
bart/converters/: adoc.py
docs/: 00-bart.adoc  10-philosophy.adoc  20-project-organization.adoc  21-supported-filetypes.adoc  22-document-cards.adoc  30-commands-and-actions.adoc  40-building-documents-and-other-output.adoc
src/: build.rs  cli.rs  document.rs  lib.rs  main.rs  markup.rs  project.rs
src/cli/: args.rs  mod.rs  parse.rs
src/tui/: mod.rs
test/: test_behavior.py  test_models.py
tests/: test_api.py  test_config.py  test_project.py  test_tempaltes.py  test_utilities.py
tests/actions/: test_build.py  test_joins.py
tests/converters/: test_adoc.py
tests/markup/: test_asciidoc_or.py
tests/projects/adoc/: 00-tests-projects-adoc.adoc  01-chapter-one.adoc  02-chapter-two.adoc  03-chapter-three.adoc
tests/test_data/: empty-project.json
