[tool.poetry]
name = "bart"
version = "0.1.0"
description = "A writing project management tool for plain-text workflows."
authors = ["delfanbaum <drelfanbaum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.0"
typer = "^0.9.0"
asciidoc = "^10.2.0"
markdown2 = "^2.4.11"
smartypants = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
